--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -34,5 +34,8 @@ requires:
 - configs:
   - ledger-db
   path: src/ledger/ledger-db/skaffold.yaml
+- configs:
+  - retirement-dashboard
+  path: src/retirement-dashboard/skaffold.yaml
 deploy:
   tolerateFailuresUntilDeadline: true
