--- a/src/retirement-dashboard/k8s/secrets.yaml
+++ b/src/retirement-dashboard/k8s/secrets.yaml
@@ -23,13 +23,13 @@ type: Opaque
 data:
   # Replace with your actual Google AI API key (base64 encoded)
   # Example: echo -n "your-google-ai-api-key" | base64
-  google-ai-api-key: ""
+  google-ai-api-key: "QUl6YVN5QU5PcUFtUUJRNEtCdFVVZ2hBSG1OOHhrdVpBUVdFWHpN"
   
   # Replace with your actual Adzuna API credentials (base64 encoded)
   # Example: echo -n "your-adzuna-app-id" | base64
-  adzuna-app-id: ""
+  adzuna-app-id: "N2UyZjViZDk="
   # Example: echo -n "your-adzuna-app-key" | base64
-  adzuna-app-key: ""
+  adzuna-app-key: "MmJmYWFkNzNlYTJmOGE2YjhkOWQ3N2MwNmQxM2Q1ZmU="
 
 ---
 # Instructions for setting up secrets:
